# multi-window-tools

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
dock-genie/: Cargo.toml  README.md
dock-genie/src/: animation.rs  easing.rs  lib.rs  main.rs  renderer.rs  shader.wgsl
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/terminal/: manager.rs  mod.rs  pty.rs
src/components/: AboutModal.tsx  AddButton.tsx  DirectoryPickerModal.tsx  FlyOverlay.tsx  SettingsModal.tsx  SuckOverlay.tsx  TabBar.tsx  TabItem.tsx  TerminalGrid.tsx  TerminalWindow.tsx  TitleBar.tsx
src/hooks/: useGridLayout.ts  useTerminal.ts
src/i18n/: translations.ts
src/shaders/: suck.frag
src/stores/: terminalStore.ts
src/styles/: themes.css
src/types/: shaders.d.ts
src/utils/: easing.ts  glHelpers.ts  minifyAnimation.ts
